[static] Fix menu being transparent on narrow screens.

--- a/src/static/layout/html/page.inc.less
+++ b/src/static/layout/html/page.inc.less
@@ -547,6 +547,11 @@ strong {
 			animation:	menu-hover 250ms ease 0s 1;
 			transform:	rotateX(30deg);
 		}
+
+		.menu-links {
+			background-color:	@menu-back;
+			border-color:		@menu-border;
+		}
 	}
 
 	&.menu-notify {
@@ -565,6 +570,8 @@ strong {
 			animation-name:	none;
 			transform:		none;
 		}
+
+		cursor:	default;
 
 		.menu-links {
 			@media screen and (max-width: 600px) {
